Add click protection to prevent card spam and adjusted game start to 3.8s instead of 5s

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
             import Game from "./game.js";
 
             const rounds = 5;
+            let busy = true;
 
             (() => {
                 // setup
@@ -251,7 +252,10 @@
 
             cards.forEach((card, i) => {
                 card.addEventListener('click', () => {
+                    if (busy) return;
                     if (card.classList.contains('flipped')) return;
+
+                    busy = true;
 
                     card.classList.add('animated', 'flipped');
                     setTimeout(() => {
@@ -262,6 +266,7 @@
 
             game.addEventListener(Game.Events.START, () => {
                 roundCounter.append(...counts);
+                busy = true;
             });
 
             game.addEventListener(Game.Events.DEAL, ({deal}) => {
@@ -277,6 +282,7 @@
                 }, 1000);
                 setTimeout(() => {
                     container.classList.remove('deal');
+                    busy = false;
                 }, 2000);
             });
 
@@ -312,7 +318,7 @@
 
             setTimeout(() => {
                 game.start();
-            }, 5000);
+            }, 3500);
         </script>
     </body>
 </html>
