--- a/index.html
+++ b/index.html
@@ -46,16 +46,23 @@
             }
 
             html.busy {
-                cursor: not-allowed;
+                cursor: progress;
             }
 
+            html {
+                padding: 0;
+            }
             body {
                 font-family: Arial, Helvetica, sans-serif;
+                padding: 0;
+                margin: 0;
             }
 
             .game-table {
+                position: relative;
                 display: grid;
                 grid-template-columns: 128px 1fr;
+                padding: 16px;
             }
             .game-table .cpu-score,
             .game-table .player-score {
@@ -80,7 +87,7 @@
                 width: 48px;
                 height: 48px;
                 border-radius: 50%;
-                background: radial-gradient(circle, rgba(237, 221, 83, 1) 0%, rgba(255, 255, 0, 1) 40%, rgba(119, 102, 0, 1) 80%);
+                background: radial-gradient(circle, rgba(255, 255, 0, 1) 0%, rgba(237, 221, 83, 1) 40%, rgba(119, 102, 0, 1) 80%);
                 background-color: rgba(119, 102, 0, 1);
                 background-position: -2px -2px;
                 background-size: 110%;
@@ -171,7 +178,7 @@
                 cursor: pointer;
             }
             html.busy .card .card-face.back {
-                cursor: not-allowed;
+                cursor: progress;
             }
             .card .card-face.back .card-back-graphic {
                 content: '';
@@ -204,6 +211,36 @@
             .card.flipped.animated .card-face.back {
                 animation: card-flip-face-hide 1s ease-in-out;
             }
+
+            .message-strip {
+                position: absolute;
+
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+
+                color: white;
+                font-family: 'Sennaar Devotee';
+                font-size: 32px;
+
+                display: grid;
+                grid-template-rows: 1fr auto 1fr;
+
+                cursor: pointer;
+            }
+            .message-strip.hidden {
+                display: none;
+            }
+            .message-strip .text {
+                grid-row: 2;
+                text-align: center;
+                background: rgba(0,0,0,0.5);
+                padding: 64px 0;
+            }
+            .message-strip .text span.punctuation {
+                font-family: Arial, Helvetica, sans-serif;
+            }
         </style>
     </head>
     <body>
@@ -223,9 +260,17 @@
                 </div>
             </div>
             <div class="player-score"></div>
+            <div class="message-strip hidden">
+                <div class="text"></div>
+            </div>
         </div>
         <script type="module">
             import Game from "./game.js";
+
+            const WELCOME_MESSAGE = "q\nMiVlVkTr";
+            const makeWinMessage = ({player, cpu}) => (
+                `${player>cpu?'MuMz':'dVlMi'}\n${player ? '•'.repeat(player) : 'n'}Mu w Mi${cpu ? '•'.repeat(cpu) : 'n'}\n${player>cpu?'q':'VgPu'}`
+            );
 
             const rounds = 5;
             let _busy = true;
@@ -257,6 +302,19 @@
             const playerScore = document.querySelector('div.player-score');
             const cpuScore = document.querySelector('div.cpu-score');
             const counts = [...document.querySelectorAll('div.round-count')];
+            const message = document.querySelector('div.message-strip .text');
+
+            const showMessage = text => {
+                message.innerHTML = text.replace(/\n/g, '<br/>');
+                message.parentElement.classList.remove('hidden');
+
+                return new Promise(resolve => {
+                    window.addEventListener('click', () => {
+                        message.parentElement.classList.add('hidden');
+                        resolve();
+                    }, { once: true });
+                });
+            };
 
             const game = new Game({ rounds });
 
@@ -318,21 +376,19 @@
             game.addEventListener(Game.Events.PLAYER_SCORE, updateScore);
             game.addEventListener(Game.Events.CPU_SCORE, updateScore);
 
-            game.addEventListener(Game.Events.PLAYER_WIN, () => {
-                const { player, cpu } = game.score;
-                alert(`YOU WON! ${player}:${cpu}`);
-                game.start();
-            });
+            const handleWin = () => {
+                showMessage(makeWinMessage(game.score)).then(() => {
+                    game.start();
+                });
+            };
+            game.addEventListener(Game.Events.PLAYER_WIN, handleWin);
+            game.addEventListener(Game.Events.CPU_WIN, handleWin);
 
-            game.addEventListener(Game.Events.CPU_WIN, () => {
-                const { player, cpu } = game.score;
-                alert(`YOU LOST! ${cpu}:${player}`);
-                game.start();
+            showMessage(WELCOME_MESSAGE).then(() => {
+                setTimeout(() => {
+                    game.start();
+                }, 2000);
             });
-
-            setTimeout(() => {
-                game.start();
-            }, 3800);
         </script>
     </body>
 </html>
