Update welcome message

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <script type="module">
             import Game from "./game.js";
 
-            const WELCOME_MESSAGE = "q\nMiVlVkTr";
+            const WELCOME_MESSAGE = "q\nMiVlVkTrTr";
             const makeWinMessage = ({player, cpu}) => (
                 `${player>cpu?'MuMz':'dVlMi'}\n${player ? '•'.repeat(player) : 'n'}Mu w Mi${cpu ? '•'.repeat(cpu) : 'n'}\n${player>cpu?'q':'VgPu'}`
             );
